<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_logo" />

        <View
            android:id="@+id/view_login_form"
            android:layout_width="353dp"
            android:layout_height="325dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/image_login_form"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_login_message"
            android:layout_width="300dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in_please"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/view_login_form"
            app:layout_constraintStart_toStartOf="@id/view_login_form"
            app:layout_constraintTop_toTopOf="@id/view_login_form" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            app:helperText=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:helperText=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sing_in"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@id/view_login_form"
            app:layout_constraintStart_toStartOf="@id/view_login_form"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />

        <Button
            android:id="@+id/button_sing_up"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:text="Creeaza cont"
            app:layout_constraintEnd_toEndOf="@id/view_login_form"
            app:layout_constraintStart_toStartOf="@id/view_login_form"
            app:layout_constraintTop_toBottomOf="@id/button_sing_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>